feat: add login with Metamask

--- a/index.html
+++ b/index.html
@@ -315,9 +315,10 @@
 				</div>
 				<div class="info-screen-title-cont">
 					<div class="submit-info">
-						<span>Name: </span>
-						<input type="text" id="name" class="blockchainName" autofocus="autofocus"/>
+						<span>Address: </span>
+						<span id="address"></span>
 					</div>
+					<button id="connect-metamask" class="gm-btn btn-blue" type="button" name="button">Connect to Metamask</button>
 					<div class="submit-info">
 						<button id="sbmt-score" class="gm-btn btn-blue" type="button" name="button">Submit score to blockchain</button>
 					</div>
