--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 		gtag('config', 'UA-3416596-20');
 	</script>
 
+	<script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
 </head>
 <body ontouchstart="">
 
