--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 	</script>
 
 	<script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
+  <script src="https://d3js.org/d3.v5.min.js"></script>
 </head>
 <body ontouchstart="">
 
